# qml-remote-control

./: CMakeLists.txt  README.md  guicontrol.cpp  guicontrol.h  libinit.cpp  qmlremotecontrol.cpp  qmlremotecontrol.h
qmltestapp/: CMakeLists.txt  main.cpp  main.qml
